# rechess.club

./: nginx.conf
.github/workflows/: deploy-backend.yml  deploy.yml
backend/: .gitignore  chess_game.py  main.py  mypy.ini  pyproject.toml  test_chess_game.py  test_coverage.sh  test_main.py
frontend/: .env.production  README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/services/: chessPieces.js
